--- a/foodDays.css
+++ b/foodDays.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 .headline-background {
-    background-image: url('images/penseldraggron.svg'); /* Sätt in sökvägen till din penseldragsbild */
+    background-image: url('images/penseldraggron.png'); /* Sätt in sökvägen till din penseldragsbild */
     background-size: cover; /* Justera storleken så att den passar ditt layoutbehov */
     background-repeat: no-repeat; /* Säkerställ att bilden inte upprepas */
     display: inline-block; /* Gör detta för att behålla bakgrundens storlek med rubrikens innehåll */
