--- a/foodDays.css
+++ b/foodDays.css
@@ -13,14 +13,27 @@ img {
 }
 
 h2 {
-    font-family: 'Caveat', serif; /* Detta kommer endast att applicera Lora på <h2>-taggar */
-    padding: 10px 20px; /* Lägg till padding för att öka läsbarheten av texten över din bakgrund */
-    color: white; /* Justera färgen så att den syns väl mot bakgrunden */
+    font-family: 'Caveat', serif;
+    /* Detta kommer endast att applicera Lora på <h2>-taggar */
+    padding: 10px 20px;
+    /* Lägg till padding för att öka läsbarheten av texten över din bakgrund */
+    color: black;
+    /* Justera färgen så att den syns väl mot bakgrunden */
+    font-size: 1.5em;
+    /* Justera textstorleken om nödvändigt */
+    margin: 0;
+    /* Ta bort marginal om den inte behövs */
+
+
 }
 
 .headline-background {
-    background-image: url('images/penseldraggron.png'); /* Sätt in sökvägen till din penseldragsbild */
-    background-size: cover; /* Justera storleken så att den passar ditt layoutbehov */
-    background-repeat: no-repeat; /* Säkerställ att bilden inte upprepas */
-    display: inline-block; /* Gör detta för att behålla bakgrundens storlek med rubrikens innehåll */
+    background-image: url('images/penseldraggron.png');
+    /* Sätt in sökvägen till din penseldragsbild */
+    background-size: cover;
+    /* Justera storleken så att den passar ditt layoutbehov */
+    background-repeat: no-repeat;
+    /* Säkerställ att bilden inte upprepas */
+    display: inline-block;
+    /* Gör detta för att behålla bakgrundens storlek med rubrikens innehåll */
 }
