--- a/foodDays.css
+++ b/foodDays.css
@@ -28,7 +28,7 @@ h2 {
 }
 
 .headline-background {
-    background-image: url('images/penseldraggron.png');
+    background-image: url('images/penseldraggron2.png');
     /* Sätt in sökvägen till din penseldragsbild */
     background-size: cover;
     /* Justera storleken så att den passar ditt layoutbehov */
